[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "vnstock_ezchart"
description = "A comprehensive wrapper for Matplotlib, Seaborn which designed to provide a fast, simple, and efficient user experience for routine data visualization tasks"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
                "squarify",
                "wordcloud",
                "vnstock",
                "requests",
                "openpyxl"
                ]