[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "vnstock_ezchart"
description = "A comprehensive wrapper for Matplotlib, Seaborn which designed to provide a fast, simple, and efficient user experience for routine data visualization tasks"
version = "0.0.3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
                "squarify",
                "wordcloud",
                "vnstock>=3.2.7",
                "requests",
                "openpyxl"
                ]