[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "vnstock_ezchart"
version = "1.0.1"
description = "A comprehensive wrapper for Matplotlib, Seaborn which designed to provide a fast, simple, and efficient user experience for routine data visualization tasks"
readme = "README.md"
authors = [{name = "Thinh Vu", email = "support@vnstocks.com"}]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24,<2.3",
    "pandas>=1.4.0,<3",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "requests>=2.25.0",
    "vnstock>=4.0.2",
    "openpyxl>=3.0.0",
    "cycler>=0.10.0",
    "mplfinance>=0.12.9b5",
]

[project.optional-dependencies]
all = [
    "squarify>=0.4.0",
    "wordcloud>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/vnstock-hq/vnstock_ezchart"

[tool.setuptools]
include-package-data = true
packages = ["vnstock_ezchart"]

[tool.setuptools.package-data]
vnstock_ezchart = ["assets/*.png"]