[metadata]
name = vnstock_ezchart
version = 0.0.1
author = Thinh Vu
author_email = mrthinh@live.com
description = A comprehensive wrapper for Matplotlib, Seaborn which designed to provide a fast, simple, and efficient user experience for routine data visualization tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vnstock-hq/vnstock_ezchart
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.7