[metadata]
name = vnstock_ezchart
version = 0.0.3
author = Thinh Vu
author_email = mrthinh@live.com
description = A comprehensive wrapper for Matplotlib, Seaborn which designed to provide a fast, simple, and efficient user experience for routine data visualization tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vnstock-hq/vnstock_ezchart
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=2.0.0
    pandas>=2.0.0
    matplotlib>=3.5.0
    seaborn>=0.11.0
    squarify>=0.4.0
    wordcloud>=1.8.0
    requests>=2.25.0
    vnstock>=1.0.0
    openpyxl>=3.0.0
    cycler>=0.10.0